# Dum-E

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  main.py  pyproject.toml
.github/: pull_request_template.md
camera/: __init__.py  lerobot_adapter.py  opencv_backend.py  realsense_backend.py  source.py  video_backend.py
config/: calibration.yaml  hardware.yaml  workspace.yaml
configs/: manual_loop.default.yaml
core/: frame.py  landmarks.py  types.py
data/: poses.json
demos/: camera_smoke.py  gesture_demo.py
docs/: CREATION_LOG.md  TECHNICAL.md  known_issues.md  mediapipeline_build_plan_v5.md  mediapipeline_current_state.md  mediapipeline_phase_verification_checklist.md  mediapipeline_recording_plan.md  repo_organization_audit.md
manuals/: __init__.py  color_detector.py  formatter.py  reader.py  types.py  visual_debug.py
perception/: filters.py  finger_state.py  gesture.py  mapper.py  operator.py  types.py
scripts/: check_regression_media.py  download_gesture_model.py
tests/: test_camera_color_conversion.py  test_camera_fake_source.py  test_camera_video_source.py  test_canned_mapper.py  test_cli.py  test_config.py  test_control.py  test_control_interfaces.py  test_core_contracts.py  test_drop_none_filter.py  test_filters_confidence.py  test_filters_cooldown.py  test_filters_drop_none.py  test_filters_frame_boundary.py  test_filters_stability.py  test_finger_state_detector.py  test_gesture_manual_wait.py  test_gesture_mapper_collisions.py  test_gesture_mapper_geometry.py  test_gesture_service_timestamp.py  test_import_boundaries.py  test_landmark_fallback.py  test_logging.py  test_manual_color_detector.py  test_manual_loop_launcher.py  (+8 more)
(+53 files in other folders)
