[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dum-e"
version = "0.1.0"
description = "Dum-E utility-first LeRobot arm toolkit foundation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dum-E Team" }
]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
hardware = [
  "pyserial>=3.5"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
dum-e = "dum_e.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
