[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dume"
version = "0.1.0"
description = "Dum-E utility-first LeRobot arm toolkit foundation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dum-E Team" }
]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
camera = [
  "opencv-python",
  "numpy"
]
perception = [
  "mediapipe>=0.10",
  "opencv-python",
  "numpy"
]
realsense = [
  "pyrealsense2"
]
dev = [
  "pytest>=8.0",
  "numpy",
  "ruff>=0.6"
]

[project.scripts]
dume = "dume.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"
